src/test/ui/issues/issue-30240.stderr
error[E0004]: non-exhaustive patterns: `&_` not covered
  --> $DIR/issue-30240.rs:2:11
   |
LL |     match "world" {
   |           ^^^^^^^ pattern `&_` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms

error[E0004]: non-exhaustive patterns: `&_` not covered
  --> $DIR/issue-30240.rs:6:11
   |
LL |     match "world" {
   |           ^^^^^^^ pattern `&_` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0004`.
