src/test/ui/issues/issue-30240.rs
fn main() {
    match "world" { //~ ERROR non-exhaustive patterns: `&Str(_)`
        "hello" => {}
    }

    match "world" { //~ ERROR non-exhaustive patterns: `&Str(_)`
        ref _x if false => {}
        "hello" => {}
    }
}
